--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "docxtemplater": "^3.62.2",
+    "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "pizzip": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
