--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "framer-motion": "^12.7.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "pizzip": "^3.2.0",
